[package]
name = "f4-w25q"
version = "0.1.0"
edition = "2021"
description = "W25Q driver using stm32-f4xx-hal QSPI implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["littlefs2"]
littlefs2 = ["dep:littlefs2", "dep:typenum"]

[dependencies]
stm32f4xx-hal = { version="0.16.0", features=["stm32f412"], path="../stm32f4xx-hal" }
cortex-m-semihosting = "0.5"
embedded-hal = "0.2.7"
littlefs2 = { version="0.4.0", optional=true, features=["c-stubs"]}
typenum = { version="1.16.0", optional=true}