[package]
name = "f4-w25q"
version = "0.1.0"
edition = "2021"
description = "W25Q driver using stm32-f4xx-hal QSPI implementation"
license = "MPL-2.0"
readme = "README.md"
homepage = "https://strathseds.org"
repository = "https://github.com/X-yl/f4-w25q/"
keywords = ["w25q", "stm32f4", "flash", "storage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["stm32f4xx-hal/stm32f412"]
littlefs2 = ["dep:littlefs2", "dep:typenum"]
embedded-storage = ["dep:embedded-storage-async"]

[dependencies]
stm32f4xx-hal = { version="0.20.0", features=["quadspi"], path="../stm32f4xx-hal"}
cortex-m-semihosting = "0.5"
embedded-hal = "0.2.7"
littlefs2 = { version="0.4.0", optional=true, features=["c-stubs"] }
typenum = { version="1.16.0", optional=true}
embedded-storage-async = { version="0.4.1", optional=true }

# For examples
[dev-dependencies]
cortex-m = { version="0.7.7", features=["critical-section-single-core"] }
cortex-m-rt = "0.7.4"
sequential-storage = "2.0.2"
stm32f4xx-hal = { version="0.20.0", features=["stm32f412"], path="../stm32f4xx-hal" }
